Mod ported to 7.1-pre1a Compatible with Useless modpack

--- a/build.gradle
+++ b/build.gradle
@@ -49,9 +49,9 @@ repositories {
 		metadataSources { artifact() }
 	}
 	ivy {
-		url = "https://github.com/Turnip-Labs"
+		url = "https://github.com/Turnip-Labs/bta-halplibe"
 		patternLayout {
-			artifact "[organisation]/releases/download/[revision]/[module]-bta-[revision].jar"
+			artifact "releases/download/[revision]/halplibe-[revision].jar"
 			m2compatible = true
 		}
 		metadataSources { artifact() }
@@ -85,7 +85,7 @@ dependencies {
 	// If you do not need Halplibe you can comment this line out or delete this line
 	modImplementation "com.github.Turnip-Labs:bta-halplibe:${project.halplibe_version}"
 
-	modImplementation "ModMenu:ModMenu:${project.mod_menu_version}"
+	//modImplementation "ModMenu:ModMenu:${project.mod_menu_version}"
 
 	implementation "org.slf4j:slf4j-api:1.8.0-beta4"
 	implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.16.0"
